fix out of bound issue

--- a/styles/break.css
+++ b/styles/break.css
@@ -14,7 +14,7 @@ h2 {
 
 body canvas {
     background-color: lightblue;
-    width: 75%;
+    width: 100%;
     height: 50vh;
     margin: 0;
     margin-top: 40px;
